{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 758,
  "lineage": "4d623b77-6129-d6d5-f50f-043375d381c3",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:loadbalancer/app/anjali-alankaram-alb/9411d6a632dd88cc",
            "arn_suffix": "app/anjali-alankaram-alb/9411d6a632dd88cc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "anjali-alankaram-alb-1794958786.ap-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:loadbalancer/app/anjali-alankaram-alb/9411d6a632dd88cc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "anjali-alankaram-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-078b4a2ee957f1da4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0960fc741cf56e554"
              },
              {
                "subnet_id": "subnet-0e2a379152f08edb9"
              }
            ],
            "subnets": [
              "subnet-0960fc741cf56e554",
              "subnet-0e2a379152f08edb9"
            ],
            "tags": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "anjali-alankaram"
            },
            "tags_all": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "anjali-alankaram"
            },
            "vpc_id": "vpc-08447dd5749f19413",
            "xff_header_processing_mode": "append",
            "zone_id": "Z0173938T07WNTVAEPZN"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:listener/app/anjali-alankaram-alb/9411d6a632dd88cc/600906b11a215b21",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:listener/app/anjali-alankaram-alb/9411d6a632dd88cc/600906b11a215b21",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:loadbalancer/app/anjali-alankaram-alb/9411d6a632dd88cc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.frontend",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:listener/app/anjali-alankaram-alb/9411d6a632dd88cc/145848fcc3ddd970",
            "certificate_arn": "arn:aws:acm:ap-south-2:908027403766:certificate/4191acca-856b-4e09-a4f5-68ca81b39840",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:targetgroup/anjali-alankaram-tg-front/24e0a2b36db67261",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:listener/app/anjali-alankaram-alb/9411d6a632dd88cc/145848fcc3ddd970",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:loadbalancer/app/anjali-alankaram-alb/9411d6a632dd88cc",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_acm_certificate.main",
            "module.alb.aws_acm_certificate_validation.main",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.frontend",
            "module.alb.aws_route53_record.cert_validation",
            "module.alb.aws_route53_zone.main",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:targetgroup/anjali-alankaram-tg-back/629e3af78d27d0db",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:listener-rule/app/anjali-alankaram-alb/9411d6a632dd88cc/145848fcc3ddd970/0633e16253243340",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*",
                      "/health"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:listener-rule/app/anjali-alankaram-alb/9411d6a632dd88cc/145848fcc3ddd970/0633e16253243340",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:listener/app/anjali-alankaram-alb/9411d6a632dd88cc/145848fcc3ddd970",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_acm_certificate.main",
            "module.alb.aws_acm_certificate_validation.main",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.backend",
            "module.alb.aws_lb_target_group.frontend",
            "module.alb.aws_route53_record.cert_validation",
            "module.alb.aws_route53_zone.main",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "www_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "anjalialankaram.com",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:listener-rule/app/anjali-alankaram-alb/9411d6a632dd88cc/145848fcc3ddd970/b2ff7c8999a879ba",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "www.anjalialankaram.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:listener-rule/app/anjali-alankaram-alb/9411d6a632dd88cc/145848fcc3ddd970/b2ff7c8999a879ba",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:listener/app/anjali-alankaram-alb/9411d6a632dd88cc/145848fcc3ddd970",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_acm_certificate.main",
            "module.alb.aws_acm_certificate_validation.main",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.frontend",
            "module.alb.aws_route53_record.cert_validation",
            "module.alb.aws_route53_zone.main",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:targetgroup/anjali-alankaram-tg-back/629e3af78d27d0db",
            "arn_suffix": "targetgroup/anjali-alankaram-tg-back/629e3af78d27d0db",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:targetgroup/anjali-alankaram-tg-back/629e3af78d27d0db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-2:908027403766:loadbalancer/app/anjali-alankaram-alb/9411d6a632dd88cc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "anjali-alankaram-tg-back",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08447dd5749f19413"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:targetgroup/anjali-alankaram-tg-front/24e0a2b36db67261",
            "arn_suffix": "targetgroup/anjali-alankaram-tg-front/24e0a2b36db67261",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:908027403766:targetgroup/anjali-alankaram-tg-front/24e0a2b36db67261",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-2:908027403766:loadbalancer/app/anjali-alankaram-alb/9411d6a632dd88cc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "anjali-alankaram-tg-front",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08447dd5749f19413"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:908027403766:security-group/sg-078b4a2ee957f1da4",
            "description": "Allow inbound HTTPS/HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078b4a2ee957f1da4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "anjali-alankaram-alb-sg",
            "name_prefix": "",
            "owner_id": "908027403766",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "anjali-alankaram"
            },
            "tags_all": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "anjali-alankaram"
            },
            "timeouts": null,
            "vpc_id": "vpc-08447dd5749f19413"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:908027403766:security-group/sg-034428c368546690a",
            "description": "Allow inbound traffic only from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034428c368546690a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-078b4a2ee957f1da4"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "anjali-alankaram-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "908027403766",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "anjali-alankaram"
            },
            "tags_all": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "anjali-alankaram"
            },
            "timeouts": null,
            "vpc_id": "vpc-08447dd5749f19413"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:908027403766:security-group/sg-0f42c078355b43821",
            "description": "Allow inbound Postgres traffic from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f42c078355b43821",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034428c368546690a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "anjali-alankaram-rds-sg",
            "name_prefix": "",
            "owner_id": "908027403766",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "anjali-alankaram"
            },
            "tags_all": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "anjali-alankaram"
            },
            "timeouts": null,
            "vpc_id": "vpc-08447dd5749f19413"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs_tasks",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:908027403766:security-group/sg-08afba62bc58e8af9",
            "description": "Allow inbound Redis traffic from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08afba62bc58e8af9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034428c368546690a"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "anjali-alankaram-redis-sg",
            "name_prefix": "",
            "owner_id": "908027403766",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "anjali-alankaram"
            },
            "tags_all": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "anjali-alankaram"
            },
            "timeouts": null,
            "vpc_id": "vpc-08447dd5749f19413"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs_tasks",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:908027403766:internet-gateway/igw-0c5370b14c601be59",
            "id": "igw-0c5370b14c601be59",
            "owner_id": "908027403766",
            "tags": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "anjali-alankaram-igw",
              "Project": "anjali-alankaram"
            },
            "tags_all": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "anjali-alankaram-igw",
              "Project": "anjali-alankaram"
            },
            "vpc_id": "vpc-08447dd5749f19413"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:908027403766:route-table/rtb-02b235d4f0c22b84d",
            "id": "rtb-02b235d4f0c22b84d",
            "owner_id": "908027403766",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5370b14c601be59",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "anjali-alankaram-public-rt",
              "Project": "anjali-alankaram"
            },
            "tags_all": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "anjali-alankaram-public-rt",
              "Project": "anjali-alankaram"
            },
            "timeouts": null,
            "vpc_id": "vpc-08447dd5749f19413"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cef244dbd25d72e",
            "route_table_id": "rtb-02b235d4f0c22b84d",
            "subnet_id": "subnet-0e2a379152f08edb9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d559112275589bc",
            "route_table_id": "rtb-02b235d4f0c22b84d",
            "subnet_id": "subnet-0960fc741cf56e554"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:908027403766:subnet/subnet-0e2a379152f08edb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2a379152f08edb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "908027403766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "anjali-alankaram-public-subnet-1",
              "Project": "anjali-alankaram"
            },
            "tags_all": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "anjali-alankaram-public-subnet-1",
              "Project": "anjali-alankaram"
            },
            "vpc_id": "vpc-08447dd5749f19413"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:908027403766:subnet/subnet-0960fc741cf56e554",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0960fc741cf56e554",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "908027403766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "anjali-alankaram-public-subnet-2",
              "Project": "anjali-alankaram"
            },
            "tags_all": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "anjali-alankaram-public-subnet-2",
              "Project": "anjali-alankaram"
            },
            "vpc_id": "vpc-08447dd5749f19413"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:908027403766:vpc/vpc-08447dd5749f19413",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053056f457b58fe10",
            "default_route_table_id": "rtb-0f2247384503b67ba",
            "default_security_group_id": "sg-0e12b40fd68a355a8",
            "dhcp_options_id": "dopt-0017159f744132ff7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08447dd5749f19413",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2247384503b67ba",
            "owner_id": "908027403766",
            "tags": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "anjali-alankaram-vpc",
              "Project": "anjali-alankaram"
            },
            "tags_all": {
              "CostCenter": "Production",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "anjali-alankaram-vpc",
              "Project": "anjali-alankaram"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}